@@ -8,7 +8,7 @@ import me.melijn.jda.utils.TableBuilder;
 import net.dv8tion.jda.bot.sharding.ShardManager;
 import net.dv8tion.jda.core.JDA;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static me.melijn.jda.Melijn.PREFIX;
 
@@ -25,7 +25,7 @@ public class ShardsCommand extends Command {
     protected void execute(CommandEvent event) {
         if (event.getGuild() == null || Helpers.hasPerm(event.getMember(), this.commandName, 0)) {
             ShardManager shardManager = event.getJDA().asBot().getShardManager();
-            TableBuilder tableBuilder = new TableBuilder().setColumns(Arrays.asList("Shard ID", "Ping", "Users", "Guilds", "VCs"));
+            TableBuilder tableBuilder = new TableBuilder().setColumns(List.of("Shard ID", "Ping", "Users", "Guilds", "VCs"));
             int shardCount = 1;
             int avgping = 0;
             int vcs = 0;
@@ -33,10 +33,10 @@ public class ShardsCommand extends Command {
                 avgping += jda.getPing();
                 long jvcs = jda.getGuilds().stream().filter(guild -> guild.getSelfMember().getVoiceState().getChannel() != null).count();
                 vcs += jvcs;
-                tableBuilder.addRow(Arrays.asList(String.valueOf(shardCount++), String.valueOf(jda.getPing()), String.valueOf(jda.getUsers().size()), String.valueOf(jda.getGuilds().size()), String.valueOf(jvcs)));
+                tableBuilder.addRow(List.of(String.valueOf(shardCount++), String.valueOf(jda.getPing()), String.valueOf(jda.getUsers().size()), String.valueOf(jda.getGuilds().size()), String.valueOf(jvcs)));
             }
             avgping = avgping/(shardCount-1);
-            tableBuilder.setFooterRow(Arrays.asList("Sum/Avg", String.valueOf(avgping), String.valueOf(shardManager.getUsers().size()), String.valueOf(shardManager.getGuilds().size()), String.valueOf(vcs)));
+            tableBuilder.setFooterRow(List.of("Sum/Avg", String.valueOf(avgping), String.valueOf(shardManager.getUsers().size()), String.valueOf(shardManager.getGuilds().size()), String.valueOf(vcs)));
 
             for (String part : tableBuilder.build()) {
                 event.reply(part);
